update(auth): add jwt
