# pkg/handler/param.go
@@ -6,6 +6,11 @@ type RegisterParam struct {
 	Password string `json:"password"`
 }
 
+type LoginParam struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
 type IdSet struct {
 	IdSet []string `json:"id_set"`
 }
